[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LD/DroppablePlatform.gd" type="Script" id=1]

[node name="Platform" type="StaticBody2D" groups=["DroppablePlatform"]]
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
one_way_collision = true

[node name="Timer1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
